# cppFileLoader

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  debug_tlv  debug_tlv.cpp  vcpkg.json
cmake/: ModernCMakeLibraryTemplateConfig.cmake.in
include/FileLoader/: FileLoader.hpp  IncrementalBuffer.hpp
include/modern_cmake_library/lib1/: lib_example.hpp
src/: CMakeLists.txt
src/FileLoader/: CMakeLists.txt  IncrementalBuffer.cpp
src/lib1/: CMakeLists.txt  lib_example.cpp  lib_privateCode.cpp  lib_privateCode.hpp
tests/: CMakeLists.txt  TestFileAssemblers.hpp  TestFileFormats.hpp  example_tests.cpp  file_formats_tests.cpp  generate_test_files.py  test_logging.hpp
